--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
      --related-color: #DB60A9;
 }
 
+::-webkit-scrollbar {
+     display: none; /* For Chrome, Safari, and Opera */
+}
 *{
      font-family: "Poppins", sans-serif;
 }
